# cli-test-executor

./: Cargo.toml  README.md
src/: ledger_tests.rs  lib.rs  main.rs  shelltestrunner.rs
tests/: basic_tests.rs  cmd-accounts.test
